# motorsport_calendar_admin_pages

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  config.toml  docker_config.toml  log4rs.yml  makefile
src/: client.rs  config.rs  main.rs  model.rs  session.rs  user.rs
src/web/: create.rs  dashboard.rs  delete.rs  event.rs  events.rs  login.rs  mod.rs  session.rs  static_routes.rs  update.rs
www/: 500_error.html.tera  dashboard.html.tera  event.html.tera  events.html.tera  inc_header.html.tera  inc_sidebar.html.tera  index.html.tera  new_event.html.tera  new_session.html.tera  session.html.tera
www/css/: common.css  dashboard.css  error.css  event.css  events.css  header.css  index.css  login.css  new_event_modal.css  sidebar.css
www/includes/: inc_header.html.tera  inc_new_event_modal.tera
www/js/: dashboard.js  event.js  events.js  new_event_modal.js
