[package]
name = "motorsport_calendar_admin_pages"
version = "0.1.0"
authors = ["Michael Ashe <mickjohnashe@hotmail.com>"]

[dependencies]
rocket = { version = "0.3.17", features = ["tls"] }
rocket_codegen = "0.3.17"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.13"
chrono = "0.4.4"
rand = "0.5.1"
failure = "0.1.1"
reqwest = "0.8.6"
log = "0.4"
env_logger = "0.4"
log4rs = "0.8.0"
lazy_static = "1.0.1"
tera = "0.11.8"
toml = "0.4"

[dependencies.rocket_contrib]
version = "0.3.14"
default-features = false
features = ["tera_templates", "json"]

[dependencies.motorsport_calendar_common]
path = "/home/mick/Programs/rust/motorsport_calendar_common"
