[package]
name = "motorsport_calendar_admin_pages"
version = "0.1.0"
authors = ["Michael Ashe <mickjohnashe@hotmail.com>"]

[dependencies]
rocket = { version = "0.4.0", features = ["tls"] }
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
chrono = "0.4.6"
rand = "0.6.1"
failure = "0.1.3"
reqwest = "0.9.5"
log = "0.4.6"
env_logger = "0.6.0"
log4rs = "0.8.1"
lazy_static = "1.2.0"
tera = "0.11.20"
toml = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "json"]

[dependencies.motorsport_calendar_common]
git = "https://github.com/mickjohn/motorsport_calendar_common.git"
rev = "ab67e77b6b0d519709e0d432f22ba4c495b33732"
